# gnu.in-shell-demo

./: .gitignore  .thumbnail  Animations.dc.html  Assets.dc.html  CONTEXT_MENU_FRONTIERS.md  Central Live.dc.html  Central.dc.html  Context.dc.html  Evidence.dc.html  Gnu.In Context Menus.dc.html  Gnu.In-Shell - Atelier.dc.html  Gnu.In-Shell - Atlas Unifié.dc.html  Gnu.In-Shell - Atomes.dc.html  Gnu.In-Shell - Fondations.dc.html  Gnu.In-Shell - Handoff.dc.html  Gnu.In-Shell - Index.dc.html  Gnu.In-Shell - Intégration.dc.html  Gnu.In-Shell - Molécules.dc.html  Gnu.In-Shell - Tooling Directions.dc.html  Gnu.in Audit Report.dc.html  Gnu.in P0 Fix Drafts.dc.html  Gnu.in P2 Contract Drafts.dc.html  Molecule Renderer.dc.html  Motion.dc.html  Roadmap.dc.html  SHELL_INVENTORY_AUDIT.md  Sys.ter Mascot Kit.dc.html  Syster.dc.html  Trigger Film.dc.html  _ping.html  animations.jsx  film-scenes.jsx  gnosis-bus.js  gnu.in-OS - Plan de Fusion (complet).dc.html  gnu.in-OS - Plan de Fusion.dc.html  index.html  nav.js  trigger-film.jsx
_components/: Syster.dc.html
audit-handoff/: AUDIT_DROP_MANIFEST.json  AUDIT_FINDINGS.md  Gnu.in Audit Checklist.dc.html  README.md  REMEDIATION_CHECKLIST.md
docs/: zip-drop-audit-2026-06-25-merging-design-assets-2.md  zip-drop-porting-protocol.md
gnu-in-shell-docs-major-drop/: Central.dc.html  DROP_SUMMARY.md  ZIP_DROP_MANIFEST.json
legacy/: MANIFEST.json  README.md  SOURCES.sha256
menu/: context-menu-showcase.jsx  molecule-data-gallery.jsx  molecule-renderer.jsx
port-data/: MANIFEST.json  PARITY.md  README.md  authority.rs  bar_settings.rs  compose_core.rs  compositor_profile.rs  dock_affordance.rs  dock_items.rs  dock_settings.rs  host_menu_state.rs  host_motion_driver.rs  host_protocol.rs  keyboard_nav.rs  launcher.rs  material.rs  media_player.rs  molecule_specs.json  motion.spec.json  motion_core.rs  panel_family.rs  quick_settings.rs  render_core.rs  resources.rs  scene_types.rs  settings_pages.rs  shell_settings.json  taskbar_registry.rs  theme.rs  tokens.json  topbar_settings.rs
tools/: smoke-canvas-surfaces.js  smoke-central-surface.js  smoke-doc-pages.js  smoke-index-surface.js  smoke-pretext-surface.js  smoke-showcase-surfaces.js
uploads/: CODEBASE_STANDARDS.md  COMPONENT_REPOS.md  COMPOSITION_ENGINE_SPEC.md  CONTRIBUTING.md  ENGINE_COMPLETION_PLAN.md  ENGINE_OPERATOR_HANDOFF.md  GOAL_ALIGNMENT_AND_NEXT_SLICE.md  JILLARIOUS_JIMPULSE_OVERHAUL_BRANCH.md  README.md  ROADMAP.md  (+5 more)
uploads/Context.Spec/blob.in/blobin-bench/: Cargo.toml
uploads/Context.Spec/blob.in/blobin-core/: Cargo.toml  build.rs
uploads/Context.Spec/blob.in/blobin-core/src/: backend.rs  engine.rs  group.rs  material.rs  raster.rs  state.rs  tessellate.rs  tokens.rs
uploads/Context.Spec/blob.in/blobin-core/tests/: lifecycle.rs  scene.rs
uploads/Context.Spec/blob.in/blobin-gen/: Cargo.toml
uploads/Context.Spec/blob.in/blobin-gen/src/: main.rs
uploads/Context.Spec/blob.in/blobin-golden/: Cargo.toml
uploads/Context.Spec/blob.in/blobin-golden/tests/: material_parity.rs
uploads/GNU.IN Design System/blob.in/: Cargo.toml  Motion-Spec-4.0-Plan.md  README.md  justfile  readiness.md  rttc-v0.14.0-drift-note.md  rttc-v0.4.0-drift-note.md  tokens.json
uploads/GNU.IN Design System/blob.in/blobin-bench/: Cargo.toml
uploads/GNU.IN Design System/blob.in/blobin-bench/benches/: frame_budget.rs  scheduler_throughput.rs
uploads/GNU.IN Design System/blob.in/blobin-core/: Cargo.toml
uploads/GNU.IN Design System/blob.in/blobin-core/src/: blob.rs  bloom.rs  diff.rs  ffi.rs  lib.rs  path.rs  pool.rs  solve.rs  tokens.rs
uploads/GNU.IN Design System/blob.in/blobin-cxxqt/: Cargo.toml  build.rs
uploads/GNU.IN Design System/blob.in/blobin-cxxqt/src/: bloom.rs  lib.rs  mascot.rs
uploads/GNU.IN Design System/blob.in/blobin-gen/: Cargo.toml
uploads/GNU.IN Design System/blob.in/blobin-gen/src/: main.rs
uploads/GNU.IN Design System/blob.in/blobin-golden/: Cargo.toml
uploads/GNU.IN Design System/blob.in/blobin-qt/qml/: MascotView.qml
uploads/GNU.IN Design System/blob.in/blobin-qt/shaders/: blob.frag
uploads/GNU.IN Design System/blob.in/blobin-qt/src/: blobin_bloom_item.cpp  blobin_bloom_item.h  blobin_item.h  blobin_material.cpp
uploads/GNU.IN Design System/blob.in/tools/: loc-guard.sh  no-unsafe.sh  r10-dogfood.md  r7-frame-budget.md  r9-qt5-fallback.md  readiness.sh
(+171 files in other folders)
