[package]
name = "blobin-gen"
version = "0.4.0"
edition = "2021"
description = "blob.in token generator — tokens.json → blobin_tokens.rs (+ QML/C++/Dart). The single source of truth, lowered to each engine."
license = "GPL-3.0-or-later"

[[bin]]
name = "blobin-gen"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
