[package]
name = "blobin-gen"
version = "0.14.0"
edition = "2021"
description = "blob.in token generator — tokens.json → blobin_tokens.rs (Rust solver) + gnu_theme.h (C++) + gnu_theme.gpui.rs (GPUI). Rust/C++ first; QML opt-in only."
license = "GPL-3.0-or-later"

[[bin]]
name = "blobin-gen"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
